fixed table vertical alignment

--- a/branches/speedy/reporting/web/common/public/speedy.css
+++ b/branches/speedy/reporting/web/common/public/speedy.css
@@ -135,7 +135,7 @@ img
 
 #content table.perty tr
 {
-	vertical-align: top;
+	vertical-align: middle;
 }
 
 #content table.perty td
